--- a/index.css
+++ b/index.css
@@ -1,11 +1,6 @@
 @font-face {
-    font-family: "Poppins";
-    src: url('Poppins-Thin.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: "Cool";
-    src: url('ModernSans-Light.otf') format('truetype');
+    font-family: "test";
+    src: url('DalekPinpointBold.ttf') ;
 }
 
 
@@ -43,96 +38,64 @@ body {
     background-color: #FFFF;
 }
 
-#description{
-    background-color: #f7f7f7;
-    margin-top: 50px;
-    margin-bottom: 50px;
+header {
+    background-image: url('img/wave_dark.png'), url('img/wave.png'), url('img/wave_light.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 514px;
+
 }
 
-main .textContent {
+header #navigation {
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-right: auto;
+    margin-left: auto;
     width: 80%;
-    background-color: #FFD23FFF;
-    margin: auto;
-    margin-top: 50px;
+
 }
 
-main .textContent img {
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-}
-
-main .content {
-    color: #000000;
-    display: flex;
-    flex-direction: column;
-    margin-left: 20px;
-    overflow: hidden;
-}
-
-main .textContent p {
-    font-family: Cool;
-    font-size: 20px;
-}
-
-main #citationContainer {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    display: flex;
-    overflow: hidden;
-    justify-content: center;
-    background-image: url('img/dots2.png');
-    background-repeat: repeat;
-}
-
-main .citation {
-    background-color: #fcfcfc;
-    border-radius: 25px;
-    width: auto;
-    margin-top: 50px;
-    min-width: 400px;
-    width: auto;
-    min-height: 160px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
+header #navigation a {
+    font-family: Poppins;
+    color: white;
+    font-size: 25px;
+    line-height: 45px;
     text-align: center;
-    padding-top: 15px;
-    margin-bottom: 50px;
 }
 
-main .citation .title {
+header #firstContent {
     display: flex;
     flex-direction: row;
-    width: 80%;
-    margin-right: auto;
-    margin-left: auto;
 
+    align-items: center;
+    justify-content: center;
+    margin-top: 300px;
 }
-
-main .citation h2 {
-    color: #fab51a;
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-main .citation img {
-    margin-left: 25px;
+header #firstContent .title{
+    width: 1000px;
 }
 
-main .citation .title b {
-    color: #636363;
+header #firstContent h1 {
+    font-family: test;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 144px;
+    line-height: 216px;
 }
 
-main .citation p {
-    width: 80%;
-    color: #909090;
-    font-size: 15px;
-    font-weight: bold;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
+header #firstContent h2 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 60px;
+    color: #565656;
 }
+
+
+
 
 
 
