--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+
 @font-face {
-    font-family: "test";
+    font-family: "Grec";
     src: url('DalekPinpointBold.ttf') ;
 }
 
@@ -65,27 +68,28 @@ header #navigation a {
     text-align: center;
 }
 
-header #firstContent {
+main #firstContent {
     display: flex;
     flex-direction: row;
 
     align-items: center;
     justify-content: center;
-    margin-top: 300px;
+
 }
-header #firstContent .title{
+
+main #firstContent .title {
     width: 1000px;
 }
 
-header #firstContent h1 {
-    font-family: test;
+main #firstContent h1 {
+    font-family: Grec;
     font-style: normal;
     font-weight: 300;
     font-size: 144px;
     line-height: 216px;
 }
 
-header #firstContent h2 {
+main #firstContent h2 {
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
@@ -94,6 +98,231 @@ header #firstContent h2 {
     color: #565656;
 }
 
+main #description {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 120px;
+
+}
+
+main #description h2 {
+    font-family: Poppins;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 60px;
+}
+
+main hr {
+    border: 4px solid #FCC22B;
+    border-radius: 18px;
+    width: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FCC22B;
+    justify-content: center;
+
+}
+
+main .content {
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+main .subContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: flex-start;
+}
+
+main .subContent .textContent {
+    margin-right: 150px;
+    overflow: hidden;
+}
+
+main .subContent h3 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 65px;
+}
+
+main .subContent p {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 45px;
+    text-align: justify;
+
+    color: #565656;
+}
+
+main #rating {
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+main .ratingContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+main .ratingContent .block {
+    width: 500px;
+    height: 250px;
+    background-color: white;
+    border-radius: 34px;
+    justify-content: center;
+
+}
+
+main .block h4 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 115px;
+    line-height: 187px;
+    color: #FCC22B;
+    text-align: center;
+    height: 50%;
+}
+
+main .block p {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 90px;
+    text-align: center;
+}
+
+main .block img[alt*="src"] {
+    margin-left: 44px;
+    margin-right: auto;
+    margin-top: 40px;
+}
+
+main #openSource {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+main #openSource p {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 45px;
+    line-height: 67px;
+    text-align: center;
+
+    color: #565656;
+}
+
+main #openSource img {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+main #avis {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 80px;
+
+}
+
+main #avis h2 {
+    font-family: Poppins;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 60px;
+}
+
+main #avis #avisContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 65%;
+    margin: 50px auto;
+}
+
+main #avis #avisContainer .arrow {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 115px;
+    line-height: 172px;
+    display: flex;
+    align-items: center;
+
+    color: #FAB51A;
+
+}
+
+main #avis #avisContainer .block {
+
+    background-color: white;
+    border-radius: 28px;
+    padding: 55px;
+    width: 905px;
+    height: 300px;
+}
+
+main #avis .title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
+}
+
+main #avis #avisContainer h5 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 45px;
+    line-height: 67px;
+    color: #FAB51A;
+    margin-bottom: 20px;
+}
+
+
+main #avisContainer .block p{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 45px;
+    text-align: justify;
+
+    color: #565656;
+}
 
 
 
