--- a/index.css
+++ b/index.css
@@ -6,6 +6,12 @@
     src: url('DalekPinpointBold.ttf') ;
 }
 
+@media (prefers-reduced-motion: reduce) {
+    html {
+        scroll-behavior: auto;
+    }
+}
+
 
 /* width */
 
@@ -29,10 +35,12 @@
 
 
 * {
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
+    user-select: none
 }
 
 html,
@@ -42,7 +50,7 @@ body {
 }
 
 header {
-    background-image: url('img/wave_dark.png'), url('img/wave.png'), url('img/wave_light.png');
+    background-image: url('img/wave_dark.svg'), url('img/wave.svg'), url('img/wave_light.svg');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -50,22 +58,81 @@ header {
 
 }
 
-header #navigation {
+
+header .navigation_top {
     display: flex;
+    padding-top: 5px;
     align-items: center;
     justify-content: space-around;
     margin-right: auto;
     margin-left: auto;
     width: 80%;
+    transition-duration: 500ms;
 
 }
 
-header #navigation a {
+header .navigation_top a {
     font-family: Poppins;
     color: white;
     font-size: 25px;
     line-height: 45px;
     text-align: center;
+    transition-duration: 500ms;
+}
+header .navigation_top a:hover{
+    color: #1a1a1a;
+    transition-duration: 250ms;
+}
+
+header .navigation_top img {
+    width: 80px;
+    height: 80px;
+    transition-duration: 500ms;
+}
+
+
+header #navigationWrapper.navigation_sticky{
+    width: 100%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 0px;
+    background-color: white;
+    height: 80px;
+    transition-property: background-color;
+    transition-duration: 500ms;
+    z-index: 1030;
+}
+
+header .navigation_sticky {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    transition-duration: 500ms;
+
+}
+
+header .navigation_sticky a {
+    font-family: Poppins;
+    color: black;
+    font-size: 25px;
+    line-height: 45px;
+    text-align: center;
+    transition-duration: 500ms;
+}
+
+header .navigation_sticky a:hover{
+    color: #fcc22b;
+    transition-duration: 250ms;
+}
+
+header .navigation_sticky img {
+    width: 75px;
+    height: 75px;
+    transition-duration: 500ms;
 }
 
 main #firstContent {
@@ -227,6 +294,7 @@ main #openSource {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 50px;
 }
 
 main #openSource p {
@@ -245,6 +313,136 @@ main #openSource img {
     margin-left: auto;
 }
 
+main #download {
+    height: 300px;
+}
+
+main #download h2 {
+    padding-top: 25px;
+    font-family: Poppins;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 60px;
+}
+
+main #downloadBlock a {
+    background-color: #FCC22B;
+    border-radius: 62px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 600px;
+    margin: 50px auto;
+    transition-duration: 500ms;
+}
+
+main #downloadBlock p {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 60px;
+    text-align: center;
+    color: white;
+}
+
+#downloadBlock a:hover {
+    width: 700px;
+    transition-duration: 500ms;
+}
+
+
+main #video h2 {
+    padding-top: 25px;
+    font-family: Poppins;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 60px;
+}
+
+main #video iframe {
+    margin-top: 50px;
+    width: 800px;
+    height: 500px;
+
+    position: absolute; /* positions out of the flow, but according to the nearest parent */
+    top: 0;
+    right: 0; /* confuse it i guess */
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+#video {
+    position: relative;
+    height: 700px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+footer .footerContent {
+    height: 350px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+footer h3 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 75px;
+    color: white;
+}
+
+footer .leftContent p {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 52px;
+    color: white;
+}
+
+footer .leftContent a {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 52px;
+    color: white;
+}
+
+footer .rightContent a {
+    display: flex;
+    flex-direction: column;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 67px;
+    color: white;
+    transition-duration: 500ms;
+}
+footer a:hover{
+    color: #1a1a1a;
+    transition-duration: 500ms;
+}
+
+/*
 main #avis {
     width: 100%;
     height: auto;
@@ -295,7 +493,7 @@ main #avis #avisContainer .block {
     height: 300px;
 }
 
-main #avis .title{
+main #avis .title {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -313,7 +511,7 @@ main #avis #avisContainer h5 {
 }
 
 
-main #avisContainer .block p{
+main #avisContainer .block p {
     font-family: Poppins;
     font-style: normal;
     font-weight: 300;
@@ -322,7 +520,7 @@ main #avisContainer .block p{
     text-align: justify;
 
     color: #565656;
-}
+}*/
 
 
 
